TrackScheduler updated for attempt number 2 at remaking the music system